objects/Post_Award_Contact__c.object
<CustomObject>
    <description>Junction Object for Post Award and Contacts</description>
    <fields>
        <fullName>Post_Award_Role__c</fullName>
        <label>Post Award Role</label>
        <picklist>
            <picklistValues>
                <fullName>POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Post Awards</relationshipLabel>
        <relationshipName>Post_Award_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Post_Award__c</fullName>
        <label>Related Post Award</label>
        <referenceTo>Post_Award__c</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>Post_Award_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Post Award Contact</label>
    <nameField>
        <displayFormat>PAC-{00000000}</displayFormat>
        <label>Post Award Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Award Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>